--- a/web/index.html
+++ b/web/index.html
@@ -35,6 +35,8 @@
 <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-storage.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
+<script src="main.dart.js" type="application/javascript"></script>
+
 
 
 <script>
@@ -61,6 +63,6 @@
     }
 
 </script>
-<script src="main.dart.js" type="application/javascript"></script>
+<script src="main.dart.js"></script>
 </body>
 </html>
